samples/_failures_safe/1761319354_590ccb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5266b1b.c: In function ‘main’:
./samples/SAFE/__tmp_d5266b1b.c:130:59: error: expected ‘)’ at end of input
  130 |     if (!read_size_t("Enter columns for matrix A: ", &cols
      |                     ~                                     ^
      |                                                           )
./samples/SAFE/__tmp_d5266b1b.c:130:5: error: expected declaration or statement at end of input
  130 |     if (!read_size_t("Enter columns for matrix A: ", &cols
      |     ^~
